Fixed Overflow

--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ form{
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.4);
     animation-name: modal;
     animation-duration: 1s;
